--- a/home_styles.css
+++ b/home_styles.css
@@ -1,9 +1,10 @@
         #main {
         }
  
-        body {
+        html, body {
           padding: 0px;
           margin: 0px;
+          height: 100%;
           font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
           background-color: rgb(255, 185, 100);
         }
@@ -22,7 +23,7 @@
           display: inline-block;
           white-space: normal;
           width: 250px;
-          max-height: 100%;
+          max-height: 100vh;
           vertical-align: top;
           padding: 4px 4px 0px;
           background-color: rgb(226, 228, 230);
@@ -32,7 +33,7 @@
         .list-header {
           padding: 8px 4px;
           position: relative;
-          min-height: 19px;
+          height: 25px;
           display: block;
           line-height: 18px;
           text-align: left;
@@ -42,7 +43,9 @@
           position: block;
           overflow-x: hidden;
           height: auto;
-          width: 100%
+          width: 100%;
+          max-height: calc(100vh - 62px);
+          margin-bottom: 5px;
         }
  
         .card {
