--- a/home_styles.css
+++ b/home_styles.css
@@ -4,7 +4,7 @@
         html, body {
           padding: 0px;
           margin: 0px;
-          height: 100%;
+          height: 100vh;
           font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
           background-color: rgb(255, 185, 100);
         }
@@ -14,10 +14,12 @@
         }
 
         .container {
-          display: block;
+          display: inline-block;
           background-color: rgb(255, 185, 100);
-          width: 100%;
-          height: 100%;
+          width: auto;
+          overflow-x: scroll;
+          overflow-y: hidden;
+          height: 100vh;
         }
 
         .list {
