--- a/home_styles.css
+++ b/home_styles.css
@@ -10,6 +10,23 @@
           font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
         }
 
+        .profile_thumbnail {
+          vertical-align: middle;
+          border: 4px solid #ddd;
+          border-radius: 8px;
+          height: 110px;
+          width: 110px;
+          margin-left: 45px;
+          margin-top: 16px;
+        }
+
+        .header {
+          width: 100%;
+          height: 150px;
+          overflow: hidden;
+          background-color: rgb(38, 114, 71);
+        }
+
         .container {
           background-color: rgb(38, 114, 71);
           width: 100%;
@@ -17,6 +34,7 @@
           overflow-y: hidden;
           height: 100vh;
           white-space: nowrap;
+          padding-left: 5px;
         }
 
         .list {
