--- a/home_styles.css
+++ b/home_styles.css
@@ -32,7 +32,7 @@
           width: 100%;
           overflow-x: auto;
           overflow-y: hidden;
-          height: 100vh;
+          height: calc(100vh - 150px);
           white-space: nowrap;
           padding-left: 5px;
         }
@@ -44,7 +44,7 @@
           display: inline-block;
           white-space: normal;
           width: 250px;
-          max-height: 95vh;
+          max-height: calc(95vh - 150px);
           vertical-align: top;
           padding: 4px 4px 0px;
           background-color: rgb(226, 228, 230);
@@ -64,7 +64,7 @@
           overflow-x: hidden;
           height: auto;
           width: 100%;
-          max-height: calc(95vh - 62px);
+          max-height: calc(95vh - 150px - 42px);
           margin-bottom: 5px;
         }
  
