--- a/home_styles.css
+++ b/home_styles.css
@@ -9,7 +9,7 @@
           font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
         }
 
-        .profile_thumbnail {
+        .profile-thumbnail {
           vertical-align: middle;
           border: 4px solid #ddd;
           border-radius: 8px;
@@ -24,9 +24,31 @@
           height: 150px;
           overflow: hidden;
           background-color: rgb(38, 114, 71);
+          display: inline-block;
         }
 
-        .container {
+        .header-information {
+          width: auto;
+          height: 100%;
+          overflow: hidden;
+          white-space: nowrap;
+          padding: 0;
+          margin: 0;
+        }
+
+        .header-title {
+          color: rgb(77, 77, 77);
+          clear: both;
+          display: block;
+          font-weight: 400;
+          margin: 0px 0px 4px;
+          overflow: hidden;
+          text-decoration: none;
+          word-wrap: break-word;
+          background-color: transparent;
+        }
+
+        .list-container {
           background-color: rgb(38, 114, 71);
           width: auto;
           overflow-x: auto;
