--- a/home_styles.css
+++ b/home_styles.css
@@ -10,7 +10,8 @@
         }
 
         .profile-thumbnail {
-          vertical-align: middle;
+          display: inline-block;
+          vertical-align: top;
           border: 4px solid #ddd;
           border-radius: 8px;
           height: 110px;
@@ -24,22 +25,34 @@
           height: 150px;
           overflow: hidden;
           background-color: rgb(38, 114, 71);
-          display: inline-block;
         }
 
         .header-information {
           width: auto;
           height: 100%;
           overflow: hidden;
-          white-space: nowrap;
-          padding: 0;
-          margin: 0;
+          display: inline-block;
+          margin-left: 15px;
+          margin-top: 22px;
         }
 
         .header-title {
-          color: rgb(77, 77, 77);
+          color: rgb(235, 232, 230);
           clear: both;
           display: block;
+          font-weight: 400;
+          margin: 0px 0px 4px;
+          overflow: hidden;
+          text-decoration: none;
+          word-wrap: break-word;
+          background-color: transparent;
+        }
+
+        .header-description {
+          color: rgb(235, 232, 230);
+          clear: both;
+          display: block;
+          width: 430px;
           font-weight: 400;
           margin: 0px 0px 4px;
           overflow: hidden;
