--- a/home_styles.css
+++ b/home_styles.css
@@ -88,6 +88,7 @@
           height: 30px;
           width: 30px;
           margin: 4px;
+          margin-right: 14px;
           position: relative;
         }
 
