--- a/index.css
+++ b/index.css
@@ -147,12 +147,17 @@
           margin-bottom: 5px;
         }
 
+        .slimScrollDiv {
+          border: 1px solid #ccc;
+          margin:10px;
+        }
+
 		    .mousescroll {
 			    overflow-y: hidden;
 		    }
 
 		    .mousescroll:hover {
-		      overflow-y: scroll;
+		      overflow-y: auto;
 		    }
 
         .card {
