--- a/index.css
+++ b/index.css
@@ -171,7 +171,8 @@
           line-height: 18px;
           border: 1px solid rgb(204, 204, 204);
           border-radius: 4px;
-          width: 240px;
+          float: left;
+          width: 232px;
           text-align: left;
           background-color: rgb(255, 255, 255);
         }
